syntax = "proto3";

option java_package = "io.blackpine.sustain.grpcJsonRelay.protos";

service JsonRelayService {
    rpc request(JsonRequest) returns (JsonResponse) {}
}

message JsonRequest {
    string json = 1;
    string method = 2;
}

message JsonResponse {
    string json = 1;
}

service SustainService {
    rpc echo(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
    string msg = 1;
}

message EchoResponse {
    string msg = 1;
}
